Add body>header to layout styling. Add app-bar styling (custom tag)

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,23 @@
   </head>
 
   <body>
+
+    <header>
+      <!-- <app-bar>
+        <app-icon>
+          <h3 class="icon"><i class="fa fa-bars"></i></h3>
+          <h3 class="title">HTMLdirt</h3>
+        </app-icon>
+
+        <app-menu type="overflow">
+          <h3 class="more icon"><i class="fa fa-ellipsis-v"></i></h3>
+          <ul>
+            <li><a href="#">Go somewhere</a></li>
+          </ul>
+        </app-menu>
+      </app-bar> -->
+    </header>
+
     
     <h1>Start here</h1>
 
