Improve form elements and overall layout

--- a/src/index.html
+++ b/src/index.html
@@ -38,170 +38,177 @@
       </app-bar> -->
     </header>
 
+    <aside>
+      <p>Foo fooo fooo</p>
+    </aside>
+
+    <main>
+
+      <h1>Start here</h1>
+      <div>
+        <p>Then change <a href="" title="gets you now here">everything</a>!</p>      
+      </div>
+
+      <h2>Form</h2>
+
+      <form>
+        <fieldset>
+          <legend>Book Info</legend>
+          <img src="http://placehold.it/105x100" class="photo" width="105" height="100">
+          <div>Summary content here</div>
+        </fieldset>
+        <hr />
+
+        <div>
+          <label>Title</label>
+          <input type="text" />
+        </div>
+
+        <div>
+          <label>ISBN</label>
+          <input type="text" />
+        </div>
+
+        <div>
+          <label>Author Name</label>
+          <input type="text" />
+        </div>
+
+        <div>
+          <label>Publish Date</label>
+          <input type="date" />
+        </div>
+
+        <div>
+          <label>Synopsis</label>
+          <input type="text" />
+        </div>
+
+        <div>
+          <label>Cover</label>
+          <select>
+            <option></option>
+            <option selected>Hard cover</option>
+            <option>Soft cover</option>
+          </select>
+        </div>
+
+        <div>
+          <label>Details</label>
+          <textarea placeholder="Some details" rows="5"></textarea>
+        </div>
+
+        <div>
+          <label>Preface</label>
+          <input type="text" />
+        </div>
+
+        <div>
+          <label>Genre</label>
+          <div>
+            <label><input type="checkbox" name="genre"/>Drama</label>
+            <label><input type="checkbox" name="genre" />Comedy</label>
+            <label><input type="checkbox" name="genre" />Action</label>
+            <label><input type="checkbox" name="genre" />Thriller</label>
+          </div>
+        </div>
+
+        <div>
+          <label>Rating</label>
+          <div>
+            <label><input type="radio" name="rating" />Must read</label>
+            <label><input type="radio" name="rating" />Recommended</label>
+            <label><input type="radio" name="rating" />Consider</label>
+            <label><input type="radio" name="rating" />Pass</label>
+          </div>
+        </div>
+
+        <footer>
+          <button class="button--primary">Save</button>
+          <button>Cancel</button>
+        </footer>
+      </form>
+
+
+      <h2>Table</h2>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Sex</th>
+            <th>Location</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Dave Gamache</td>
+            <td>26</td>
+            <td>Male</td>
+            <td>San Francisco</td>
+          </tr>
+          <tr>
+            <td>Dwayne Johnson</td>
+            <td>42</td>
+            <td>Male</td>
+            <td>Hayward</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h2>Typography</h2>
+
+      <h3>Lists</h3>
+
+      <h4>Unordered Lists</h4>
+
+      <ul>
+        <li>Unordered lists have basic styles</li>
+        <li>
+          They use the circle list style
+          <ul>
+            <li>Nested lists styled to feel right</li>
+            <li>Can nest either type of list into the other</li>
+          </ul>
+        </li>
+        <li>Just more list items mama san</li>
+      </ul>
+
+      <h4>Ordered Lists</h4>
+
+      <ol>
+        <li>Ordered lists also have basic styles</li>
+        <li>
+          They use the decimal list style
+          <ol>
+            <li>Nested ordered list item</li>
+            <li>Another list item, nested</li>
+          </ol>
+        </li>
+        <li>
+          They use the decimal list style
+          <ul>
+            <li>Ordered and unordered can be nested</li>
+            <li>Can nest either type of list into the other</li>
+          </ul>
+        </li>
+        <li>Last list item just for the fun</li>
+      </ol>
+
+
+      <h3>Code</h3>
+
+      <pre>
+        <code>
+          .some-class {
+            background-color: red;
+          }
+        </code>
+      </pre>
+
+    </main>
     
-    <h1>Start here</h1>
-
-    <div>
-      <p>Then change <a href="" title="gets you now here">everything</a>!</p>      
-    </div>
-
-    <h2>Form</h2>
-
-    <form>
-      <fieldset>
-        <legend>Book Info</legend>
-        <img src="http://placehold.it/105x100" class="photo" width="105" height="100">
-        <div>Summary content here</div>
-      </fieldset>
-      <hr />
-
-      <div>
-        <label>Title</label>
-        <input type="text" />
-      </div>
-
-      <div>
-        <label>ISBN</label>
-        <input type="text" />
-      </div>
-
-      <div>
-        <label>Author Name</label>
-        <input type="text" />
-      </div>
-
-      <div>
-        <label>Publish Date</label>
-        <input type="date" />
-      </div>
-
-      <div>
-        <label>Synopsis</label>
-        <input type="text" />
-      </div>
-
-      <div>
-        <label>Cover</label>
-        <select>
-          <option></option>
-          <option selected>Hard cover</option>
-          <option>Soft cover</option>
-        </select>
-      </div>
-
-      <div>
-        <label>Details</label>
-        <textarea placeholder="Some details" rows="5"></textarea>
-      </div>
-
-      <div>
-        <label>Preface</label>
-        <input type="text" />
-      </div>
-
-      <div>
-        <label>Genre</label>
-        <div>
-          <label><input type="checkbox" name="genre"/>Drama</label>
-          <label><input type="checkbox" name="genre" />Comedy</label>
-          <label><input type="checkbox" name="genre" />Action</label>
-          <label><input type="checkbox" name="genre" />Thriller</label>
-        </div>
-      </div>
-
-      <div>
-        <label>Rating</label>
-        <div>
-          <label><input type="radio" name="rating" />Must read</label>
-          <label><input type="radio" name="rating" />Recommended</label>
-          <label><input type="radio" name="rating" />Consider</label>
-          <label><input type="radio" name="rating" />Pass</label>
-        </div>
-      </div>
-
-      <footer>
-        <button class="button--primary">Save</button>
-        <button>Cancel</button>
-      </footer>
-    </form>
-
-
-    <h2>Table</h2>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Age</th>
-          <th>Sex</th>
-          <th>Location</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Dave Gamache</td>
-          <td>26</td>
-          <td>Male</td>
-          <td>San Francisco</td>
-        </tr>
-        <tr>
-          <td>Dwayne Johnson</td>
-          <td>42</td>
-          <td>Male</td>
-          <td>Hayward</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <h2>Typography</h2>
-
-    <h3>Lists</h3>
-
-    <h4>Unordered Lists</h4>
-
-    <ul>
-      <li>Unordered lists have basic styles</li>
-      <li>
-        They use the circle list style
-        <ul>
-          <li>Nested lists styled to feel right</li>
-          <li>Can nest either type of list into the other</li>
-        </ul>
-      </li>
-      <li>Just more list items mama san</li>
-    </ul>
-
-    <h4>Ordered Lists</h4>
-
-    <ol>
-      <li>Ordered lists also have basic styles</li>
-      <li>
-        They use the decimal list style
-        <ol>
-          <li>Nested ordered list item</li>
-          <li>Another list item, nested</li>
-        </ol>
-      </li>
-      <li>
-        They use the decimal list style
-        <ul>
-          <li>Ordered and unordered can be nested</li>
-          <li>Can nest either type of list into the other</li>
-        </ul>
-      </li>
-      <li>Last list item just for the fun</li>
-    </ol>
-
-
-    <h3>Code</h3>
-
-    <pre>
-      <code>
-        .some-class {
-          background-color: red;
-        }
-      </code>
-    </pre>
 
     <!-- dev -->
     <script src="jspm_packages/system.js"></script>
