Make tables responsive (kinda). Add nav tag for drawer

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,15 @@
     </header>
 
     <aside>
-      <p>Foo fooo fooo</p>
+      <nav>
+        <section>
+          <h3><i class="fa fa-user"></i> My Account</h3>
+          <ul>
+            <li><a href="#/account/preferences">Preferences</a></li>
+            <li><a href="#/account/profile">Profile</a></li>
+          </ul>
+        </section>
+      </nav>
     </aside>
 
     <main>
