Clean up tables and make them more usable on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -143,24 +143,58 @@
       <table>
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Sex</th>
-            <th>Location</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Publish Date</th>
+            <th>Genre</th>
+            <th>Page Count</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Dave Gamache</td>
-            <td>26</td>
-            <td>Male</td>
-            <td>San Francisco</td>
+            <td>Tenjis Can</td>
+            <td>Francesca Po</td>
+            <td>2012-06-12</td>
+            <td>Drama</td>
+            <td>304</td>
+            <td>
+              <i class="fa fa-pencil-square-o"></i>
+              <i class="fa fa-trash-o"></i>
+            </td>
           </tr>
           <tr>
-            <td>Dwayne Johnson</td>
-            <td>42</td>
-            <td>Male</td>
-            <td>Hayward</td>
+            <td>The Joker and the Frock</td>
+            <td>Geoffery Duglas</td>
+            <td>1983-04-21</td>
+            <td>Thriller</td>
+            <td>102</td>
+            <td>
+              <i class="fa fa-pencil-square-o"></i>
+              <i class="fa fa-trash-o"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Pointy's Guide</td>
+            <td>Spinner Tale</td>
+            <td>1963-03-02</td>
+            <td>Thriller</td>
+            <td>90</td>
+            <td>
+              <i class="fa fa-pencil-square-o"></i>
+              <i class="fa fa-trash-o"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Spinning Heads</td>
+            <td>Uerrey Kraken</td>
+            <td>1997-03-19</td>
+            <td>Comedy</td>
+            <td>65</td>
+            <td>
+              <i class="fa fa-pencil-square-o"></i>
+              <i class="fa fa-trash-o"></i>
+            </td>
           </tr>
         </tbody>
       </table>
