Clean up styles to improve reusability

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   <body>
 
     <header>
+      <h3 class="title"><i class="fa fa-bars"></i> HTMLdirt</h3>
       <!-- <app-bar>
         <app-icon>
           <h3 class="icon"><i class="fa fa-bars"></i></h3>
