re-org and clean up bases

--- a/src/index.html
+++ b/src/index.html
@@ -23,23 +23,38 @@
   <body>
 
     <header>
-      <h3 class="title"><i class="fa fa-bars"></i> HTMLdirt</h3>
-      <!-- <app-bar>
-        <app-icon>
-          <h3 class="icon"><i class="fa fa-bars"></i></h3>
-          <h3 class="title">HTMLdirt</h3>
-        </app-icon>
 
-        <app-menu type="overflow">
-          <h3 class="more icon"><i class="fa fa-ellipsis-v"></i></h3>
-          <ul>
-            <li><a href="#">Go somewhere</a></li>
-          </ul>
-        </app-menu>
-      </app-bar> -->
+      <div role="title">
+        <button class="fa fa-bars"></button>
+        <h1>HTMLdirt</h1>
+        <h2>Grow custom responsive sites</h2>
+      </div>
+
+      <div role="actions">
+        <button class="fa fa-ellipsis-v"></button>
+
+        <ul class="overflow">
+            <li><a href="#">Elsewhere</a></li>
+            <li><a href="#">Another place</a></li>
+            <li><a href="#">Logout</a></li>
+        </ul>
+
+        <ul>
+            <li>
+              <input type="search" />
+            </li>
+
+            <li><button class="button-primary">Save</button></li>
+            <li><button>Cancel</button></li>
+        </ul>
+
+      </div>
+
     </header>
 
+
     <aside>
+
       <nav>
         <section>
           <h3><i class="fa fa-user"></i> My Account</h3>
@@ -49,6 +64,7 @@
           </ul>
         </section>
       </nav>
+
     </aside>
 
     <main>
