--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,7 @@
       <div role="actions">
 
         <ul>
-            <li>
-              <input type="search" />
-            </li>
-
+            <li><input type="search" /></li>
             <li><button class="button-primary">Save</button></li>
             <li><button>Cancel</button></li>
         </ul>
@@ -46,7 +43,7 @@
             <li><a href="#">Another place</a></li>
             <li><a href="#">Logout</a></li>
         </ul>
-        
+
         <button class="fa fa-ellipsis-v"></button>
 
       </div>
