Provide some sane baselines for forms and tables

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <header>
 
       <div role="title">
-        <button class="fa fa-bars"></button>
+        <a href="#" class="toggle toggle-navigation-drawer fa fa-bars"></a>
         <h1>HTMLdirt</h1>
         <h2>Grow custom responsive sites</h2>
       </div>
@@ -34,7 +34,7 @@
 
         <ul>
             <li><input type="search" /></li>
-            <li><button class="button-primary">Save</button></li>
+            <li><button class="button--primary">Save</button></li>
             <li><button>Cancel</button></li>
         </ul>
 
@@ -44,7 +44,7 @@
             <li><a href="#">Logout</a></li>
         </ul>
 
-        <button class="fa fa-ellipsis-v"></button>
+        <a href="#" class="toggle toggle-overflow fa fa-ellipsis-v"></a>
 
       </div>
 
@@ -69,8 +69,9 @@
 
       <h1>Start here</h1>
       <div>
-        <p>Then change <a href="" title="gets you now here">everything</a>!</p>      
+        <p>Then go your own <a href="" title="gets you now here">way</a>!</p>      
       </div>
+
 
       <h2>Form</h2>
 
@@ -80,7 +81,6 @@
           <img src="http://placehold.it/105x100" class="photo" width="105" height="100">
           <div>Summary content here</div>
         </fieldset>
-        <hr />
 
         <div>
           <label>Title</label>
@@ -147,6 +147,7 @@
         </div>
 
         <footer>
+          <label></label>
           <button class="button--primary">Save</button>
           <button>Cancel</button>
         </footer>
@@ -214,7 +215,15 @@
         </tbody>
       </table>
 
+
       <h2>Typography</h2>
+
+      <h3>Paragraphs</h3>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis est rhoncus, 
+      aliquet massa ut, molestie ex. In pellentesque venenatis sagittis. Proin fringilla et ligula 
+      quis tristique. Vivamus a risus eget arcu convallis pharetra quis nec turpis. Aenean euismod 
+      vehicula erat sed luctus.</p>
 
       <h3>Lists</h3>
 
@@ -264,6 +273,17 @@
         </code>
       </pre>
 
+      <h3>Almost done</h3>
+
+      <blockquote>
+        Below is a dividing line -- an hr. This is a quote
+
+        <cite>Amonynus</cite>
+      </blockquote>
+
+      <hr />
+
+      <p>Did you see the &lt;hr /&gt; up there?</p>
     </main>
     
 
