Colors are easier to review with addition of swatches

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,72 @@
             <li><a href="#/account/profile">Profile</a></li>
           </ul>
         </section>
+
+        <footer>
+          <h3><i class="fa fa-paint-brush"></i>Colors</h3>
+
+          <div class="hd-swatches">
+            <h4>canvas</h4>
+            <ul>
+              <li class="canvas-color" title="canvas-color"></li>
+            </ul>
+
+            <h4>primary</h4>
+            <ul>
+              <li class="primary-color" title="primary-color"></li>
+              <li class="primary-color--dark" title="primary-color--dark"></li>
+              <li class="primary-color--light" title="primary-color--light"></li>
+              <li class="primary-color--muted" title="primary-color--muted"></li>
+            </ul>
+
+            <h4>complementary</h4>
+            <ul>
+              <li class="complementary-color" title="complementary-color"></li>
+              <li class="complementary-color--dark" title="complementary-color--dark"></li>
+              <li class="complementary-color--light" title="complementary-color--light"></li>
+              <li class="complementary-color--muted" title="complementary-color--muted"></li>
+            </ul>
+
+            <h4>accent</h4>
+            <ul>
+              <li class="accent-color" title="accent-color"></li>
+              <li class="accent-color--dark" title="accent-color--dark"></li>
+              <li class="accent-color--light" title="accent-color--light"></li>
+              <li class="accent-color--muted" title="accent-color--muted"></li>
+            </ul>
+            <ul>
+              <li class="positive-accent-color" title="positive-accent-color"></li>
+              <li class="negative-accent-color" title="negative-accent-color"></li>
+            </ul>
+
+            <h4>text</h4>
+            <ul>
+              <li class="text-color" title="text-color"></li>
+              <li class="text-color--secondary" title="text-color--secondary"></li>
+              <li class="text-color--subtle" title="text-color--subtle"></li>
+            </ul>
+
+            <h4>alt text</h4>
+            <ul>
+              <li class="alt-text-color" title="alt-text-color"></li>
+              <li class="alt-text-color--secondary" title="alt-text-color--secondary"></li>
+              <li class="alt-text-color--subtle" title="alt-text-color--subtle"></li>
+            </ul>
+
+            <h4>link</h4>
+            <ul>
+              <li class="link-color" title="link-color"></li>
+              <li class="link-color--active" title="link-color--active"></li>
+              <li class="link-color--hover" title="link-color--hover"></li>
+              <li class="link-color--visited" title="link-color--visited"></li>
+            </ul>
+
+            <h4>divider</h4>
+            <ul>
+              <li class="divider-color" title="divider-color"></li>
+            </ul>
+          </div>
+        </footer>
       </nav>
 
     </aside>
